Calculate indoc search position in workview to avoid 'jumping' icons

--- a/Resources/Private/Less/Structure.less
+++ b/Resources/Private/Less/Structure.less
@@ -223,6 +223,48 @@ a {
                         }
                     }
                 }
+                .fulltext-search-toggle {
+                    position: absolute;
+                    top: 0;
+                    right: 90px;
+                    width: 40px;
+                    height: 40px;
+                    background: white url('@{control-icons}') no-repeat -560px 0;
+                    background-size: auto 120px;
+                    border-radius: 20px;
+                    cursor: pointer;
+                    &:after {
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        height: 40px;
+                        width: 40px;
+                        text-align: center;
+                        content: "+";
+                        font-size: 42px;
+                        line-height: 32px;
+                        color: @secondary-color;
+                        .transition();
+                        opacity: 0;
+                    }
+                    .search-indocument-active & {
+                        background: lighten(@secondary-color-light, 40%);
+                        &:after {
+                            .transform(rotate(45deg));
+                            opacity: 1;
+                        }
+                    }
+                    &.disabled {
+                        opacity: .5;
+                        pointer-events: none;
+                    }
+                    .no-touchevents & {
+                        .transition();
+                        &:hover {
+                            .transform(scale(1.2));
+                        }
+                    }
+                }
             }
             .fullscreen & {
                 .transform(translateY(-100%));
@@ -331,7 +373,7 @@ a {
     }
     @media screen and (min-width: @tabletViewportWidth) {
         a {
-        padding-top: 300px;
+            padding-top: 300px;
             &:before {
                 position: absolute;
                 top: 0;
